[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/UI/Hud.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/Coin_counter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/UI/Hud/Pause button.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UI/Garbage_counter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resourses/Shortcuts/PauseShortcut.tres" type="ShortCut" id=5]
[ext_resource path="res://Assets/UI/Hud/Paused panel.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Hud/Play button.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Hud/Home button.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Hud/Restart button.png" type="Texture" id=9]
[ext_resource path="res://Resourses/Shortcuts/ResumeShortcut.tres" type="ShortCut" id=10]

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="."]
margin_left = 19.0
margin_top = 20.0
margin_right = 65.0
margin_bottom = 70.0
mouse_filter = 2
input_pass_on_modal_close_click = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Buttons"]
margin_right = 46.0
margin_bottom = 50.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
shortcut = ExtResource( 5 )
texture_normal = ExtResource( 3 )

[node name="Counters" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -255.0
margin_top = 20.0
margin_right = -18.0
margin_bottom = 60.0
grow_horizontal = 0
rect_min_size = Vector2( 237, 40 )
mouse_filter = 2
input_pass_on_modal_close_click = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Garbage_counter" parent="Counters" instance=ExtResource( 4 )]
margin_right = 100.0

[node name="Control" type="Control" parent="Counters"]
margin_left = 104.0
margin_right = 129.0
margin_bottom = 40.0
rect_min_size = Vector2( 25, 40 )

[node name="Coin_counter" parent="Counters" instance=ExtResource( 2 )]
margin_left = 133.0
margin_right = 233.0

[node name="PauseLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="PauseMenu" type="Control" parent="PauseLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="PauseLayer/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.490196 )

[node name="TextureRect" type="TextureRect" parent="PauseLayer/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -138.0
margin_right = 215.0
margin_bottom = 138.0
rect_min_size = Vector2( 430, 276 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="HBoxContainer" parent="PauseLayer/PauseMenu/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.5
margin_top = -125.0
margin_right = 92.5
margin_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 166, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="TextureButton" parent="PauseLayer/PauseMenu/TextureRect/ButtonsContainer"]
margin_right = 47.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
shortcut = ExtResource( 10 )
texture_normal = ExtResource( 7 )

[node name="RestartButton" type="TextureButton" parent="PauseLayer/PauseMenu/TextureRect/ButtonsContainer"]
margin_left = 59.0
margin_right = 105.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 9 )

[node name="HomeButton" type="TextureButton" parent="PauseLayer/PauseMenu/TextureRect/ButtonsContainer"]
margin_left = 119.0
margin_right = 166.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 8 )

[connection signal="pressed" from="Buttons/TextureButton" to="." method="PauseButton_pressed"]
[connection signal="pressed" from="PauseLayer/PauseMenu/TextureRect/ButtonsContainer/ResumeButton" to="." method="ResumeButton_pressed"]
[connection signal="pressed" from="PauseLayer/PauseMenu/TextureRect/ButtonsContainer/RestartButton" to="." method="RestartButton_pressed"]
[connection signal="pressed" from="PauseLayer/PauseMenu/TextureRect/ButtonsContainer/HomeButton" to="." method="HomeButton_pressed"]
